apps/llama-cpp/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: llama-cpp
  labels:
    goldilocks.fairwinds.com/enabled: "true"
